# flyvy

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_DCO.md  Cargo.toml  LANGUAGE.md  NOTICE  README.md
benchmarking/: Cargo.toml  README.md
benchmarking/src/: lib.rs  measurement.rs  qalpha.rs  report.rs  run.rs  time_bench.rs
fly/: Cargo.toml
fly/src/: defs.rs  lib.rs  ouritertools.rs  parser.rs  printer.rs  quant.rs  rets.rs  semantics.rs  sorts.rs  syntax.rs  transitions.rs
fly/src/snapshots/: fly__printer__module_tests__module_print.snap  fly__printer__module_tests__module_print.snap.new
fly/src/term/: cnf.rs  fo.rs  mod.rs  prime.rs  subst.rs
inference/: Cargo.toml
inference/src/: atoms.rs  basics.rs  finite.rs  fixpoint.rs  hashmap.rs  houdini.rs  lemma.rs  lfp.rs  lib.rs  marco.rs  parallel.rs  quant.rs  subsume.rs  trie.rs  updr.rs  utils.rs  weaken.rs
inference/src/qalpha/: atoms.rs  baseline.rs  fixpoint.rs  frame.rs  language.rs  lemma.rs  lemmas.rs  mod.rs  quant.rs  subsume.rs  transform.rs  trie.rs  weaken.rs
smtlib/: Cargo.toml
smtlib/snapshots/: temporal_verifier__smtlib__proc__tests__cvc5_ill_formed.snap  temporal_verifier__smtlib__proc__tests__z3_ill_formed.snap
smtlib/src/: conf.rs  lib.rs  path.rs  proc.rs  sexp.rs  tee.rs
smtlib/src/snapshots/: smtlib__proc__tests__cvc4_ill_formed.snap  smtlib__proc__tests__cvc4_ill_formed.snap.new  smtlib__proc__tests__cvc5_ill_formed.snap  smtlib__proc__tests__cvc5_ill_formed.snap.new  smtlib__proc__tests__z3_ill_formed.snap  smtlib__proc__tests__z3_ill_formed.snap.new
solver/: Cargo.toml
solver/src/: backends.rs  basics.rs  conf.rs  imp.rs  lib.rs  models.rs  parallel.rs  sexp.rs  tptp.rs  vampire.rs
temporal-verifier/: Cargo.toml
temporal-verifier/benches/: sexp_benchmark.rs
temporal-verifier/examples/: consensus.fly  consensus_epr.fly  consensus_forall.fly  lockserver.fly  pingpong.fly
temporal-verifier/examples/fol/: block_cache_system_frozen_async.fly  bosco_3t_safety.fly  client_server_ae.fly  client_server_db_ae.fly  consensus_epr.fly  consensus_forall.fly  consensus_wo_decide.fly  fast_paxos_epr.fly  fast_paxos_forall.fly  fast_paxos_forall_choosable.fly  firewall.fly  flexible_paxos_epr.fly  flexible_paxos_forall.fly  flexible_paxos_forall_choosable.fly  hybrid_reliable_broadcast_cisa.fly  learning_switch.fly  multi_paxos_epr.fly  paxos_epr.fly  paxos_forall.fly  paxos_forall_choosable.fly  raft.fly  ring_id.fly  ring_id_not_dead.fly  sharded_kv.fly  stoppable_paxos_epr.fly  stoppable_paxos_forall.fly  stoppable_paxos_forall_choosable.fly  ticket.fly  toy_consensus_epr.fly  toy_consensus_forall.fly  vertical_paxos_epr.fly  vertical_paxos_forall.fly  vertical_paxos_forall_choosable.fly
temporal-verifier/examples/snapshots/: consensus.fly.snap  fast_paxos_epr.fly.snap  lockserver.fly.cvc5.snap  lockserver.fly.infer-cvc5.2.snap  lockserver.fly.infer-qalpha.1.snap  lockserver.fly.infer-z3.1.snap  pingpong.fly.cvc4.snap
temporal-verifier/src/: command.rs  concurrent.rs  lib.rs
temporal-verifier/tests/: test_examples.rs  test_query_determinism.rs
temporal-verifier/tests/examples/: README.md  basic2.fly  lockserver_buggy.fly  simple_defs.fly
temporal-verifier/tests/examples/fail/: basic.fly  lockserver_bug.fly  relations.fly  safety1_init.fly
temporal-verifier/tests/examples/fail/sorts/: def_arg_count.fly  def_body_type.fly  def_repeated_args.fly  def_shadows_global.fly  proof_w_invariants.fly  quantifier_repeated_args.fly  redeclared_def.fly  redeclared_function.fly  sort_checking_two_sorts.fly  sort_inference_but_still_wrong.fly  tests.toml  uncallable.fly  uncalled.fly  undeclared_sort.fly  unknown_function.fly  unknown_variable.fly
temporal-verifier/tests/examples/snapshots/: basic1.fly.snap  defs.fly.inline.1.snap  defs.fly.print.snap  lockserver_buggy.fly.1.snap  lockserver_buggy.fly.2.snap  lockserver_buggy.fly.3.snap  lockserver_buggy.fly.snap  lockserver_buggy.fly.snap.new  simple_defs.fly.inline.1.snap  simple_defs.fly.print.snap
temporal-verifier/tests/examples/snapshots/fail/: basic.fly.cvc4.snap  basic.fly.cvc5.snap  basic.fly.z3.snap  lockserver_bug.fly.cvc4.snap  lockserver_bug.fly.cvc5.snap  lockserver_bug.fly.z3.snap  relations.fly.cvc4.snap  relations.fly.cvc5.snap  relations.fly.z3.snap  safety1_ind.fly.cvc5.snap  safety1_init.fly.cvc5.snap  safety1_init.fly.z3.snap  safety1_proof_invariants.fly.1.cvc4.snap  safety1_proof_invariants.fly.1.cvc5.snap  safety1_proof_invariants.fly.houdini.snap  safety2_missing_inv.fly.cvc4.snap  safety2_missing_inv.fly.cvc5.snap  safety2_missing_inv.fly.z3.snap  safety3_extra_inv.fly.1.cvc4.snap  safety3_extra_inv.fly.1.cvc5.snap  safety3_extra_inv.fly.houdini.z3.snap
temporal-verifier/tests/examples/snapshots/fail/sorts/: always.fly.snap  arg_count_mismatch.fly.snap  assume.fly.snap  def_arg_count.fly.snap  def_body_type.fly.snap  def_repeated_args.fly.snap  def_ret_sort.fly.snap  def_ret_use.fly.snap  def_shadows_global.fly.snap  def_wrong_arg.fly.snap  empty_call_def.fly.snap  empty_calls.fly.snap  imm_vs_mut.fly.snap  proof_w_invariants.fly.snap  quantifier_repeated_args.fly.snap  (+16 more)
temporal-verifier/tests/examples/snapshots/success/: immutability.fly.cvc5.snap  immutability.fly.houdini.1.cvc5.snap  immutability.fly.z3.snap  safety1.fly.houdini.1.cvc4.snap  safety1.fly.z3.snap  safety1_proof_invariants.fly.cvc4.snap  safety1_proof_invariants.fly.houdini.1.cvc5.snap  safety2.fly.houdini.1.cvc4.snap  safety2.fly.z3.snap  safety3.fly.cvc5.snap  safety3.fly.houdini.1.cvc4.snap
temporal-verifier/tests/examples/success/: immutability.fly  safety1_proof_invariants.fly
temporal-verifier/tests/examples/success/sorts/: allow_overlapping_sort_and_function_names.fly  inference_basic.fly  inference_ignore_sort.fly  shadowing.fly
verify/: Cargo.toml
verify/src/: error.rs  lib.rs  module.rs  safety.rs  temporal.rs
verify/src/snapshots/: temporal_verifier__verify__module__tests__verify_safety1_fail.snap  verify__module__tests__verify_failing2.snap  verify__module__tests__verify_safety1_fail.snap
(+355 files in other folders)
