[workspace]
members = [
	"fly",
	"bounded",
	"smtlib",
	"solver",
	"inference",
	"verify",
	"temporal-verifier",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# [features]
# trace = ["peg/trace"]

# walkdir = "2.3.3"

# [dev-dependencies]
# criterion = "0.5.1"
# regex = "1.8.4"
# shell-words = "1.1.0"
# toml = "0.7.4"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

# include debug symbols to simplify profiling
[profile.release]
debug = true
