[workspace]
members = [
	"fly",
	"bounded",
	"smtlib",
	"solver",
	"inference",
	"verify",
	"temporal-verifier",
	"benchmarking",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

# include debug symbols to simplify profiling
[profile.release]
debug = true
