[package]
name = "benchmarking"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
humantime = "2.1.0"
nix = { version = "0.26.2", default-features = false, features = [
  "signal",
  "process",
  "resource",
  "fs",
] }
fork = "0.1.22"
exec = "0.3.1"
process-sync = "0.2.2"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
walkdir = "2.3.3"
tabled = "0.13.0"
glob = "0.3.1"
itertools = "0.10.5"
