[package]
name = "fly"
version.workspace = true
edition.workspace = true

[dependencies]
codespan-reporting = "0.11.1"
itertools = "0.10.5"
peg = "0.8.1"
ena = "0.14.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
thiserror = "1.0.40"
im = "15.1.0"
nix = { version = "0.26.2", default-features = false, features = ["resource", "process", "signal"] }
lazy_static = "1.4.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
