[package]
name = "smtlib"
version.workspace = true
edition.workspace = true

[dependencies]
eyre = "0.6.8"
nix = { version = "0.26.2", default-features = false, features = ["resource", "process", "signal"] }
thiserror = "1.0.40"
peg = "0.8.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
