[package]
name = "temporal-verifier"
version.workspace = true
edition.workspace = true
default-run = "temporal-verifier"

[dependencies]
bounded = { path = "../bounded" }
fly = { path = "../fly" }
inference = { path = "../inference" }
solver = { path = "../solver" }
verify = { path = "../verify" }

clap = { version = "4.3.4", features = ["derive"] }
codespan-reporting = "0.11.1"
path-slash = "0.2.1"
rayon = "1.7.0"
pretty_env_logger = "0.5.0"
walkdir = "2.3.3"
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
regex = "1.8.4"

[dev-dependencies]
criterion = "0.5.1"
shell-words = "1.1.0"
toml = "0.7.4"
insta = { version = "1.29.0", features = ["yaml", "redactions"] }

[[bench]]
name = "sexp_benchmark"
harness = false
