[package]
name = "verify"
version.workspace = true
edition.workspace = true

[dependencies]
fly = { path = "../fly" }
solver = { path = "../solver" }

codespan-reporting = "0.11.1"
thiserror = "1.0.40"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
log = "0.4.19"
rayon = "1.7.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "redactions"] }
